# zephyr_climate_monitor

./: .gitignore  .gitmodules  build.sh  flash.sh
app/: CMakeLists.txt  app.overlay  prj.conf
app/src/: backlight.c  backlight.h  main.c
app/src/core/: CMakeLists.txt  backlight.cpp  backlight.h  event_machine.cpp  event_machine.hpp
app/src/interface/: func.h  main_page.c  main_page.h  settings_page.c  settings_page.h
app/src/interface/colors/: colors.c  colors.h
app/src/interface/fonts/: askii_art.c  comfortaa_12.c  comfortaa_16.c  comfortaa_24.c  comfortaa_64.c  open_sans_18.c
